# quanto

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  README_IT.md  mkdocs.yml  pyproject.toml
.GitHub/: copilot-instructions.md
doc/: index.md  monte_carlo.md  qaoa_portfolio.md  quantum_amplitude_estimation.md
examples/: config.yaml  run_commands.md
notebooks/: backtest.ipynb  entanglement_backtest.ipynb  hilbert_demo.ipynb  optimize.ipynb  price.ipynb
src/qsors/: __init__.py  cli.py  config.py
src/qsors/backtest/: engine.py
src/qsors/optimize/: milp.py
src/qsors/portfolio/: hilbert.py
src/qsors/pricing/: quantum_qae.py
src/qsors/utils/: logging.py
src/quanto/: __init__.py  cli.py  config.py
src/quanto/backtest/: engine.py
src/quanto/data/: market.py  prices.py
src/quanto/entangle/: __init__.py
src/quanto/optimize/: milp.py  qaoa.py
src/quanto/portfolio/: hilbert.py
src/quanto/pricing/: black_scholes.py  monte_carlo.py  quantum_qae.py
src/quanto/utils/: hw.py  logging.py
tests/: test_backtest.py  test_black_scholes.py  test_cli.py  test_config.py  test_entangle.py  test_hilbert.py  test_monte_carlo.py  test_optimize.py  test_quantum.py
