[tool.poetry]
name = "qsors"
version = "0.1.0"
description = "Experimental options trading lab comparing classical vs quantum-simulated methods"
authors = ["OpenAI Assistant <assistant@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
scipy = "^1.11"
pandas = "^2.1"
pyyaml = "^6.0"
pydantic = "^2.6"
rich = "^13.7"
typing-extensions = "^4.9"
tqdm = "^4.66"
typer = {version = "^0.9", extras = ["all"]}
yfinance = "^0.2"
cvxpy = {version = "^1.4", optional = true}
vectorbt-lite = {version = "^0.18", optional = true}

[tool.poetry.extras]
quantum = ["qiskit~=0.45", "qiskit-optimization~=0.6", "pennylane~=0.34"]
gpu = ["torch>=2,<3"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
ruff = "^0.1.15"
black = "^24.1"
mypy = "^1.8"
pre-commit = "^3.7"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
