[tool.poetry]
name = "quanto"
version = "0.1.0"
description = "Experimental options trading lab comparing classical vs quantum-simulated methods"
authors = ["OpenAI Assistant <assistant@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "quanto", from = "src"}]
include = ["src/quanto/py.typed"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
scipy = "^1.11"
pandas = "^2.1"
pyyaml = "^6.0"
pydantic = "^2.6"
rich = "^13.7"
requests = "^2.32"
typing-extensions = "^4.9"
tqdm = "^4.66"
click = ">=8,<8.2"
typer = {version = "^0.9", extras = ["all"]}
yfinance = "^0.2"
cvxpy = {version = "^1.4", optional = true}
vectorbt-lite = {version = "^0.18", optional = true}
qiskit = {version = "~0.45", optional = true}
qiskit-optimization = {version = "~0.6", optional = true}
qiskit-algorithms = {version = "~0.3", optional = true}
pennylane = {version = "~0.34", optional = true}
torch = {version = ">=2,<3", optional = true}

[tool.poetry.extras]
quantum = ["qiskit", "qiskit-algorithms", "qiskit-optimization", "pennylane"]
gpu = ["torch"]
classical = ["cvxpy", "vectorbt-lite"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
ruff = "^0.1.15"
black = "^24.1"
mypy = "^1.8"
pre-commit = "^3.7"
scipy-stubs = "^1.16"
types-PyYAML = "^6.0"
mkdocs = "^1.5"
mkdocs-material = "^9.5"

[tool.poetry.scripts]
quanto = "quanto.cli:app"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
